# jdb

./: .clang-format  .clangd  CMakeLists.txt
include/libjdb/: bit.hpp  error.hpp  libjdb.hpp  parse.hpp  pipe.hpp  process.hpp  register_info.hpp  registers.hpp  types.hpp
include/libjdb/detail/: registers.inc
src/: CMakeLists.txt  libjdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: reg_read.s  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  jdb.cpp
